[edit] changed return type of the bot strategies